dom/smil/nsSMILAnimationController.cpp
@@ -32,6 +32,7 @@ nsSMILAnimationController::nsSMILAnimationController(nsIDocument* aDoc)
     mDeferredStartSampling(false),
     mRunningSample(false),
     mRegisteredWithRefreshDriver(false),
+    mMightHavePendingStyleUpdates(false),
     mDocument(aDoc)
 {
   MOZ_ASSERT(aDoc, "need a non-null document");
@@ -462,6 +463,7 @@ nsSMILAnimationController::DoSample(bool aSkipUnchangedContainers)
 
   // Update last compositor table
   mLastCompositorTable = currentCompositorTable.forget();
+  mMightHavePendingStyleUpdates = true;
 
   NS_ASSERTION(!mResampleNeeded, "Resample dirty flag set during sample!");
 }
@@ -843,7 +845,12 @@ nsSMILAnimationController::AddStyleUpdate(AnimationElementPtrKey* aKey,
 void
 nsSMILAnimationController::AddStyleUpdatesTo(RestyleTracker& aTracker)
 {
+  MOZ_ASSERT(mMightHavePendingStyleUpdates,
+             "Should only add style updates when we think we might have some");
+
   mAnimationElementTable.EnumerateEntries(AddStyleUpdate, &aTracker);
+
+  mMightHavePendingStyleUpdates = false;
 }
 
 //----------------------------------------------------------------------
